# rustx86

./: .gitattributes  .gitignore  Cargo.toml  README.md  config.toml
examples/: emulator.rs
freedos/: freedos.iso  x86BOOT.img  x86DSK01.img  x86DSK02.img  x86DSK03.img  x86DSK04.img  x86DSK05.img  x86DSK06.img
src/: bios.rs  boot.rs  disk.rs  dma.rs  lib.rs  main.rs  memory.rs  rom.rs  serial.rs
src/cpu/: addressing.rs  execute.rs  flags.rs  instructions.rs  mod.rs  registers.rs
src/cpu/instructions/: arithmetic.rs  control_flow.rs  data_transfer.rs  flags.rs  group.rs  interrupt.rs  io.rs  logic.rs  mod.rs  stack.rs  string.rs
src/disk/: bios_parameter_block.rs  dir_entry.rs  disk_image.rs  geometry.rs  mbr.rs  mod.rs  partition_entry.rs
src/memory/: mod.rs  ram.rs  system.rs
tools/: extract.rs
