[package]
name = "dos_emu"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "extract"
path = "tools/extract.rs"

[[bin]]
name = "emulator"
path = "examples/emulator.rs"

[dependencies]
termios = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
simplelog = "0.12"
chrono = "0.4"
libc = "0.2"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
fatfs = "0.3"
zip = "0.6" 